[package]
name = "recollection"
version = "0.1.0-beta.0"
authors = [ "Chris Pecunies <clp@clp.is>" ]
edition = "2018"
description = "primary a miscellaneous assortment of useful methods and data types. implementations and reimplementations of common data structures and algorithms, and other personally commonly used utilities"
keywords = ["algorithms"]
license = "MIT"
homepage = "https://clp.is/projects/recollection"
repository = "https://github.com/clpi/recollection"
documentation  = "https://docs.rs/recollection"
publish = true
readme = "README.md"

[lib]
name = "recollection"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "recollection"
path = "src/bin/main.rs"

[[bench]]
name = "graph"
path = "benches/graph/lib.rs"
harness = false

[features]
default = ["channel", "graph", "chain", "config", "fs", "derive"]
graph = []
chain = []
config = []
fs = []
channel = []
derive = ["recollection-derive"]

[[test]]
name = "graph"
path = "tests/data/graph.rs"


[dependencies]
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.65"
recollection-derive = { path = "./lib/recollection-derive", optional = true }

[dev-dependencies]
criterion = "0.3.5"
tempfile = "3.2.0"

[build-dependencies]
