[package]
name = "recollection-derive"
authors = [ "Chris Pecunies <clp@clp.is>" ]
description = "Optional crate to provide helpful derive/attribute macros"
version = "0.1.0"
edition = "2018"

[lib]
name = "recollection_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = "1.0.74"
